--- a/womeninanalytics.css
+++ b/womeninanalytics.css
@@ -32,8 +32,23 @@ body {
 
 .header .menu ul a {
     text-decoration: none;
-    color: red;
-}
+    color: var(--primary-red);
+  }
+  
+  .header .menu ul a::after {
+    content: "";
+    width: 0%;
+    height: 3px;
+    background: #9b9999;
+    display: block;
+    margin: auto;
+    margin-top: 5px;
+    transition: 0.3s ease-in-out;
+  }
+  
+  .header .menu ul a:hover::after {
+    width: 70%;
+  }
 
 .drawer-menu {
     width: 0px;
@@ -93,10 +108,22 @@ body {
 
 }
 
-.join-btn {
-    background-color: red;
-    color: white !important;
+.contact-btn::after,
+.join-btn::after {
+  display: none !important;
 }
+
+.join-btn {
+  background-color: red;
+  color: white !important;
+}
+
+.contact-btn:hover {
+  background-color: red;
+  color: white !important;
+  transition: .5s;
+}
+
 
 .contact-btn:hover {
     background-color: red;
