--- a/womeninanalytics.css
+++ b/womeninanalytics.css
@@ -187,39 +187,59 @@ body {
     margin:100px;
     font-size: 18px;
 }
+  
 footer {
-    margin-top: 90px;
-    height: 180.4px;
-    width: 100%;
-    background-color: rgb(27, 62, 116);
-    display: flex;
-    justify-content: center;
-    display: grid;
-    grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
-    grid-gap: 20px;
-  }
-  
-  .logo-footer {
-    width: 100px;
-    margin-left: 5px;
-  }
-  
-  .footer-menu li {
-    margin-top: 15px;
-    margin-left: 100px;
-    font-size: 20px;
+    height: 250px;
+    background-color: #004064;
+    margin-top: 100px;
     display: flex;
     align-items: center;
     color: white;
+}
+
+.logo-footer {
+    width: 30%;
+    text-align: center;
+}
+  
+.footer-menu {
+    flex-grow: 1;
+}
+  
+.footer-menu ul {
     list-style: none;
+    display: flex;
+    flex-direction: column;
+    gap: 15px;
+    font-size: 18px;
+}
+  
+  
+.footer-menu ul li {
+    cursor: pointer;
   }
   
-  .footer-contact {
-    width: 90%;
+.footer-menu ul li:hover {
+    color: red;
+    transition: .2s;
+}
+  
+.footer-contact {
+    width: 40%;
     display: flex;
     flex-direction: column;
     gap: 20px;
-  }
+}
+  
+.footer-contact .contact-title {
+    font-size: 26px;
+}
+  
+.footer-contact .contact-row {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+}
 
 /* TABLETTE */
 
